Closed
Bug 247421
Opened 22 years ago
Closed 21 years ago
Popup blocker disabled but still blocks links and normal links on javascript menu
Categories
(SeaMonkey :: UI Design, defect)
SeaMonkey
UI Design
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8alpha2
People
(Reporter: oldfoot, Assigned: danm.moz)
References
()
Details
(Keywords: fixed-aviary1.0, fixed1.7.5)
Attachments
(1 file)
|
6.66 KB,
patch
|
bryner
:
review+
jst
:
superreview+
brendan
:
approval-aviary+
mkaply
:
approval1.7.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040614 Firefox/0.9
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040614 Firefox/0.9
We use the JSCookMenu. After approximately 20 clicks (sometimes more sometimes
less) the popup blocker will block all links in the javascript menu. These links
are opened in the current window.
Disabling the popup blocker has no effect. It's wierd that these are not even
popups, so it must be something in the javascript menu.
Closing and opening the browser fixes the problem.
Reproducible: Always
Steps to Reproduce:
1. Go to the above site. (disable your popup blocker)
2. Click about 15-20 times on the dropdown menus
3. The popup blocker blocks sites even when disabled
Expected Results:
Not blocked the links.
Comment 1•22 years ago
|
||
ccing danm, that 20 figure jumped right out at me.
Good call Mike. 20's the magic number. Yes, this happens because JSCookMenu is
triggering the popup blocker (because the window is opened in a mouseup
handler). Even when the popup blocker is "off," it won't allow a website to
spawn a whole bunch of popups. It's mistakenly counting each instance of an open
window here as another simultaneous popup, and it's probably also an error that
the window is counted against the popup limit at all.
Assignee: firefox → danm-moz
Status: UNCONFIRMED → NEW
Component: Preferences → XP Apps: GUI Features
Ever confirmed: true
OS: Windows XP → All
Product: Firefox → Browser
Hardware: PC → All
Target Milestone: --- → mozilla1.8alpha2
Version: unspecified → Trunk
Bug 197919 Non Mouse Click & Max Number of Popups Exceptions
Attachment #151126 -
Flags: superreview?(jst)
Attachment #151126 -
Flags: review?(bryner)
Comment 5•22 years ago
|
||
Comment on attachment 151126 [details] [diff] [review]
global popup limit: don't count self popups, count one window only once
sr=jst
Attachment #151126 -
Flags: superreview?(jst) → superreview+
Updated•22 years ago
|
Attachment #151126 -
Flags: review?(bryner) → review+
Comment 6•22 years ago
|
||
Should this go in 1.7.1?
Comment on attachment 151126 [details] [diff] [review]
global popup limit: don't count self popups, count one window only once
mkaply: possibly. I'll flip the ? flag and see what happens.
This bug should be fairly rare. It causes problems on the 20th or so attempt to
open allowed popups under somewhat peculiar circumstances. (Note that the
circumstances mentioned in comment 0 will no longer trigger this bug, since a
fix for bug 247965 was checked in.)
I expect the most likely scenario for triggering this bug now will be opening a
named popup, so:
<div onmouseover="javascript:window.open(<url>, 'windowname')">
if a window by that name is already open.
This bug may never be seen again, so it's far from critical. However it's a
low-risk code change for the better.
Attachment #151126 -
Flags: approval1.7.1?
3133 danm 1.605 /* Allow or deny a window open based on whether
popups are suppressed.
3134 danm-moz 1.636 A popup generally will be allowed if it's from a
white-listed domain,
3135 or if its target is an extant window.
3136 danm 1.605 Returns PR_TRUE if the window should be opened. */
3137 danm-moz 1.680 PRUint32
3138 GlobalWindowImpl::CheckOpenAllow(PRUint32 aAbuseLevel,
3139 const nsAString &aName)
Would you please fix the comment? I'd reopen this bug, but I can't because it
isn't resolved.
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/dom/src/base/nsGlobalWindow.cpp&rev=1.680&mark=3136-3137#3133
Checked in to trunk for 1.8a2, and Aviary 1.0 branch for 0.9.1+. Comment also fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 10•21 years ago
|
||
Comment on attachment 151126 [details] [diff] [review]
global popup limit: don't count self popups, count one window only once
a=mkaply
I think we want this.
Attachment #151126 -
Flags: approval1.7.2? → approval1.7.2+
| Assignee | ||
Comment 11•21 years ago
|
||
Checked in to the 1.7 branch for 1.7.2.
Keywords: fixed-aviary1.0,
fixed1.7.2
| Reporter | ||
Comment 12•21 years ago
|
||
I beg to differ about this statement:
"This bug may never be seen again, so it's far from critical. "
But I agree with the change for the better. This bug has still not been fixed in
Firefox 0.92 and 0.93, although it was mentioned below that it was supoosed to
have been.
This is holding me releasing the Firefox software to our college (some 7000
users). The type of menu is also deployed in other OS projects such as:
Mambo, MoreGroupWise etc, so it will affect lots of people.
Please help us to resolve it as we're fed up of IE!!!
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 13•21 years ago
|
||
actually, 0.9.2/0.9.3 are still 0.9 + security fixes. 1.0PR1 will have the fix.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 14•21 years ago
|
||
(In reply to comment #13)
> actually, 0.9.2/0.9.3 are still 0.9 + security fixes. 1.0PR1 will have the fix.
"Checked in to trunk for 1.8a2, and Aviary 1.0 branch for 0.9.1+. Comment also
fixed."
So either this is wrong or I'm reading it the wrong way. Got a rough estimate
how long I will need to wait? 1 month? 2? 6? Based on estimated from 0.9 to
0.93...I'd say probably close to 6.
Comment 15•21 years ago
|
||
So for those of us who don't want to upgrade to 1.8a3 because we find it too
buggy, setting dom.popup_maximum to 0 would appear to disable the new feature
that is causing the problem and be a suitable workaround.
Note also that the instance of this that I ran across is for:
windowObject = window.open("","WindowName") // note that the url arg is
intentionally blank
...which is used to get a window object for an already open window (or frame)
that you know the name to. I take it that this fix will also work for this type
of usage?
Comment 16•21 years ago
|
||
(In reply to comment #15)
> So for those of us who don't want to upgrade to 1.8a3 because we find it too
> buggy, setting dom.popup_maximum to 0 would appear to disable the new feature
> that is causing the problem and be a suitable workaround.
Actually make that -1, not 0.
Comment 17•21 years ago
|
||
Comment on attachment 151126 [details] [diff] [review]
global popup limit: don't count self popups, count one window only once
We want 1.7.x and aviaryy1.0 in sync, for some value of x that means "checked
in on the MOZILLA_1_7_BRANCH."
/be
Attachment #151126 -
Flags: approval-aviary+
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
Comment 19•21 years ago
|
||
I'm seeing something suspiciously similar to this - or perhaps Bug 257501 - in
Firefox 1.0. It should be fixed there, yes?
| Assignee | ||
Comment 20•21 years ago
|
||
Gordon: you're probably thinking of bug 260264. This bug is really obsolete
since bug 252326 landed.
You need to log in
before you can comment on or make changes to this bug.
Description
•