global popup window limit no longer counts self windows or double-counts named windows. bug 247421 r=bryner,jst